--- a/manifest.json
+++ b/manifest.json
@@ -2,10 +2,11 @@
     "manifest_version":3,
     "name": "Hate_Speech_Detection Alpha",
     "description": "Hate Speech Detection Extension",
-    "version": "1.0",
+    "version": "0.2.0",
     "action": {
-        "default_popup": "hello.html",
+        "default_popup": "HSD.html",
         "default_icon": "hello_extensions.png"
     }
+
 }    
     
