trying to establish pyscript connection

--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,13 @@
     "manifest_version":3,
     "name": "Hate Speech Detection",
     "description": "Hate Speech Analysis Extension",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "action": {
         "default_popup": "HSD.html",
         "default_icon": "hello_extensions.png"
     },
     "content_security_policy" : {
-        "extension_pages" :"script-src 'self'"
+        "extension_pages" : "script-src 'self';"
     }
 }  
     
