--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,19 @@
     "manifest_version":3,
     "name": "Hate Speech Detection",
     "description": "Hate Speech Analysis Extension",
-    "version": "0.3.1",
+    "version": "0.3.2",
     "action": {
         "default_popup": "HSD.html",
         "default_icon": "hello_extensions.png"
     },
+    "sandbox":{
+        "pages":[
+            "HSD.html"
+        ]
+    },
+    
     "content_security_policy" : {
-        "extension_pages" : "script-src 'self';"
+        "sandbox": "sandbox allow-scripts; script-src 'unsafe-eval' 'self' https://pyscript.net https://cdn.jsdelivr.net"
     }
 }  
     
