--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,31 @@
 {
-    "manifest_version":3,
-    "name": "Hate Speech Detection",
-    "description": "Hate Speech Analysis Extension",
-    "version": "0.3.1",
-    "action": {
-        "default_popup": "HSD.html",
-        "default_icon": "hello_extensions.png"
+    "name": "Text to Wikipedia",
+    "description": "Highlight over a word to go to that Wikipedia article",
+    "version": "1.0",
+    "manifest_version": 3,
+    "action": {"default_popup": "popup.html"},
+    "background": {
+        "service_worker": "background.js"
     },
-    "content_security_policy" : {
-        "extension_pages" : "script-src 'self';"
-    }
-}  
-    
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["popup.js"]
+        }
+    ],
+    "sandbox": {
+        "pages": [
+          "popup.html"
+        ]
+      },
+      "content_security_policy": {
+        "sandbox": "sandbox allow-scripts; script-src 'unsafe-eval' 'self' https://pyscript.net https://cdn.jsdelivr.net"
+      },
+      "permissions":[
+        "contextMenus",
+        "tabs",
+        "storage",
+        "scripting",
+        "activeTab"
+    ]
+}
