--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Filipino Hatespeech Detectionv3",
+    "name": "Filipino Hatespeech Detectionv3 (git)",
     "description": "official filipino hatespeech detection demo",
     "version": "1.0",
     "manifest_version": 3,
