--- a/manifest.json
+++ b/manifest.json
@@ -3,14 +3,14 @@
     "description": "official filipino hatespeech detection demo",
     "version": "1.0",
     "manifest_version": 3,
-    "action": {"default_popup": "popup.html"},
+    "action": {"default_popup": "userInterface.html"},
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "contextMenu.js"
     },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["popup.js"]
+            "js": ["contextMenu.js"]
         }
     ],
     "permissions":[
