--- a/manifest.json
+++ b/manifest.json
@@ -5,12 +5,12 @@
     "manifest_version": 3,
     "action": {"default_popup": "userInterface.html"},
     "background": {
-        "service_worker": "contextMenu.js"
+        "service_worker": "contextmenu.js"
     },
     "content_scripts": [
         {
             "matches": ["<all_urls>"],
-            "js": ["cloudService.js"]
+            "js": ["cloudservice.js"]
         }
     ],
     "permissions":[
